updating flask app.py

--- a/climate_starter_AP.ipynb
+++ b/climate_starter_AP.ipynb
@@ -154,11 +154,14 @@
     "\n",
     "#latest data point date:\n",
     "last_date = session.query(Measurement.date).order_by(Measurement.date.desc()).first()\n",
-    "yr = last_date[0][0:4]\n",
-    "mon = last_date[0][5:7]\n",
-    "day = last_date[0][8:10]\n",
+    "\n",
+    "# source: https://stackoverflow.com/questions/23324266/converting-string-to-date-object-without-time-info\n",
+    "#Create datetime object and then convert to date object\n",
+    "last_date_convert = dt.datetime.strptime(last_date[0], '%Y-%m-%d')\n",
+    "last_date_convert = last_date_convert.date()\n",
+    "\n",
     "#calculating date 1 year before the last data point (not hardcoding, in case database changes):\n",
-    "prev_yr_date = dt.date(int(yr), int(mon), int(day)) - dt.timedelta(days = 365)\n",
+    "prev_yr_date = (last_date_convert - dt.timedelta(days = 365))\n",
     "\n",
     "# Perform a query to retrieve the data and precipitation scores\n",
     "prcp_data = session.query(Measurement.date, Measurement.prcp).filter(Measurement.date >= prev_yr_date).all()\n",
@@ -292,8 +295,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -309,7 +314,7 @@
        " ('USC00518838', 511)]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,9 +332,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('USC00519281', 54.0)]\n",
+      "[('USC00519281', 85.0)]\n",
+      "[('USC00519281', 71.66378066378067)]\n"
+     ]
+    }
+   ],
    "source": [
     "# Using the station id from the previous query, calculate the lowest temperature recorded, \n",
     "# highest temperature recorded, and average temperature of the most active station?\n",
@@ -344,12 +359,16 @@
     "\n",
     "#average temp recorded for most active station\n",
     "average_temp = session.query(Measurement.station, func.avg(Measurement.tobs)).\\\n",
-    "            filter(Measurement.station == most_active_station).all()\n"
+    "            filter(Measurement.station == most_active_station).all()\n",
+    "\n",
+    "print(lowest_temp)\n",
+    "print(highest_temp)\n",
+    "print(average_temp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +377,7 @@
        "Text(0.5, 0, 'Temperature')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
